<resources>
    <string name="app_name">ExitGame</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google_account">Login with google account</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="dummy">dummy</string>
    <string name="booking">Booking</string>
    <string name="view_more">View More</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="orderby">orderBy</string>
    <string name="request_a_new_escape_room">Request a new escape room</string>
    <string name="escape_room_name">Escape room name</string>
    <string name="suggested_price_group">Suggested price / group</string>
    <string name="explain_your_idea_here">Explain your idea here...</string>
    <string name="request">Request</string>



    <string-array name="booking_item_names">
        <item>Alice</item>
        <item>Bank robbing</item>
        <item>Chernobyl</item>
        <item>Cyber attack</item>
        <item>Iron throne</item>
        <item>Labyrinth of the mind</item>
        <item>Nuclear adventure</item>
        <item>Pirate Bay</item>
        <item>Saw</item>
        <item>Submarine</item>
        <item>The cathedral</item>
        <item>The Cube</item>
        <item>Titanic</item>
        <item>Zombie</item>
    </string-array>

    <string-array name="booking_item_prizes">
        <item>9000Ft/Group</item>
        <item>7600Ft/Group</item>
        <item>4900Ft/Group</item>
        <item>8700Ft/Group</item>
        <item>6700Ft/Group</item>
        <item>9700Ft/Group</item>
        <item>9900Ft/Group</item>
        <item>5900Ft/Group</item>
        <item>5500Ft/Group</item>
        <item>6500Ft/Group</item>
        <item>7600Ft/Group</item>
        <item>8700Ft/Group</item>
        <item>8800Ft/Group</item>
        <item>9600Ft/Group</item>

    </string-array>

</resources>