<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:hint="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"

        />


    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRegister"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRegEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextRegPasswordConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRegPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextRegPasswordConf"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="Cancel"
            />
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="Register"
            android:layout_marginStart="40dp" />

    </LinearLayout>
</RelativeLayout>