<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RequestActivity">

            <TextView
                android:id="@+id/req_title"
                style="@style/style_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="@string/request_a_new_escape_room"
                android:textAlignment="center"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/req_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/req_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/escape_room_name"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/req_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/req_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/suggested_price_group"
                android:inputType="textShortMessage" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/req_price"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/custom_button"
                    android:onClick="backToSearch"
                    android:text="@string/back" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/custom_button"
                    android:onClick="requestNew"
                    android:text="@string/request" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>